# aws-event-driven-sf

./: .gitignore  README.md  aws-event-driven-sf.code-workspace
app/event_receiver/: pyproject.toml
app/event_receiver/src/event_receiver/: index.py
app/event_receiver/tests/models/: test_models.py
app/workflow_execution/: build_script.sh  pyproject.toml
app/workflow_execution/src/workflow_execution/: index.py  models.py  sfn_activity_handler.py
app/workflow_execution/tests/models/: test_models.py
cdk/: app.py  pyproject.toml
cdk/stack/: cdk_stack.py  event.json
layer/lambda_common/: build_layer_script.sh  pyproject.toml
