[tool.poetry]
name = "event_receiver"
version = "0.1.0"
description = ""
authors = ["katsut"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
lambda-common = {path = "../../layer/lambda_common", develop = true}
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]
