[tool.poetry]
name = "lambda_common"
version = "0.1.0"
description = ""
authors = ["katsut"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = "^2.16.1"
aws-xray-sdk = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
