[tool.poetry]
name = "lambda_common"
version = "0.1.0"
description = ""
authors = ["katsut"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.16.1"
aws-xray-sdk = "^2.12.0"
pydantic = "^1.10.8"
more-itertools = "^9.1.0"
boto3 = "^1.26.148"
boto3-stubs = {extras = ["stepfunctions"], version = "^1.26.148"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]
